--- a/src/components/btn.module.css
+++ b/src/components/btn.module.css
@@ -5,7 +5,8 @@
     background-color: #3f51b5;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-align: center;
-    display: inline-block;
+    display: block;
+    margin-bottom: 10px;
     color: #fff;
     border: 0;
     text-decoration: none;
